--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header>
             <div class="logo">
                 <img src="logo" alt="">
+                <bcj>
             </div>
             
         </header>
