--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <div class="logo">
                 <img src="logo" alt="">
             </div>
+            <div class="cat">
+                
+            </div>
             
         </header>
     </div>
