--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <div class="logo">
                 <img src="logo" alt="">
             </div>
-            <div class="cat">
-                
+            <div class="check">
+
             </div>
             
         </header>
