--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="logo">
                 <img src="logo" alt="">
             </div>
-            <div class="ckdksbckz">
+            <div class="ckdksbckghz">
 
             </div>
             
