--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            
+        <header></header>
             <div class="logo">
                 <img src="logo" alt="">
             </div>
