--- a/index.html
+++ b/index.html
@@ -3,21 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>ComCod</title>
 </head>
 <body>
     <div class="container">
-        <header></header>
-            <div class="logo">
-                <img src="logo" alt="">
-            </div>
-            <div class="abdef">
 
+        <header>
+            <div class="icon">
+                <h2>ComCod</h2>
+            </div>
+            <div id="sign-in-btn">
+                <input type="button" value="Registration" name="Registration">
+            </div>
+            <div class="sign-up-btn"><input type="button" value="Login" name="Login">
             </div>
             
+            <div class="navbar">
+                <ul class="menuitem">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">All Courses</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                </ul>
+            </div>
         </header>
     </div>
+    
 </body>
-<script src="script.js"></script>
 </html>
