--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>ComCod</title>
 </head>
 <body>
@@ -12,19 +13,22 @@
             <div class="icon">
                 <h2>ComCod</h2>
             </div>
-            <div id="sign-in-btn">
+            <div class="btn">
+            <div id="sign-in">
                 <input type="button" value="Registration" name="Registration">
             </div>
-            <div class="sign-up-btn"><input type="button" value="Login" name="Login">
+            <div id="sign-up">
+                <input type="button" value="Login" name="Login">
+            </div>
             </div>
             
-            <div class="navbar">
+            <div class="navbar" >
                 <ul class="menuitem">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">All Courses</a></li>
-                    <li><a href="#">Jobs</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li class="lst-item"><a href="#">Home</a></li>
+                    <li class="lst-item"><a href="#">All Courses</a></li>
+                    <li class="lst-item"><a href="#">Jobs</a></li>
+                    <li class="lst-item"><a href="#">About us</a></li>
+                    <li class="lst-item"><a href="#">Contact us</a></li>
                 </ul>
             </div>
         </header>
