--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <div class="clearfx"></div>
         <!--It is complete body-->
         <div class="body">
-
         <div class="imgslide">
-            <img src="img/slide2.png" alt="slide1">
+            <img name="slide"  width= "100%";
+            height="500px"; alt="slide1">
         </div>
    
     <div class="card-container">
@@ -51,7 +51,52 @@
         <div class="card"></div>
     </div>
 
-    
+    <footer>
+        <div class="footerbox">
+            <h2>footer 1</h2>
+            <ul class="footer-list">
+                    <li class="footer-item"><a href="#">Home</a></li>
+                    <li class="footer-item"><a href="#">All Courses</a></li>
+                    <li class="footer-item"><a href="#">Jobs</a></li>
+                    <li class="footer-item"><a href="#">About us</a></li>
+                    <li class="footer-item"><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="footerbox">
+            <h2>footer 1</h2>
+            <ul class="footer-list">
+                    <li class="footer-item"><a href="#">Home</a></li>
+                    <li class="footer-item"><a href="#">All Courses</a></li>
+                    <li class="footer-item"><a href="#">Jobs</a></li>
+                    <li class="footer-item"><a href="#">About us</a></li>
+                    <li class="footer-item"><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="footerbox">
+            <h2>footer 1</h2>
+            <ul class="footer-list">
+                    <li class="footer-item"><a href="#">Home</a></li>
+                    <li class="footer-item"><a href="#">All Courses</a></li>
+                    <li class="footer-item"><a href="#">Jobs</a></li>
+                    <li class="footer-item"><a href="#">About us</a></li>
+                    <li class="footer-item"><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+        <div class="footerbox">
+            <h2>footer 1</h2>
+            <ul class="footer-list">
+                    <li class="footer-item"><a href="#">Home</a></li>
+                    <li class="footer-item"><a href="#">All Courses</a></li>
+                    <li class="footer-item"><a href="#">Jobs</a></li>
+                    <li class="footer-item"><a href="#">About us</a></li>
+                    <li class="footer-item"><a href="#">Contact us</a></li>
+            </ul>
+        </div>
+        
+    </footer>
+    <div class="copy">
+        <p>Copyright &copy; 2020. All Right Reserved by ComCod</p>
+    </div>
     </div><!--Body Close-->
     </div><!--Container-close-->
 </body>
