course section compeleted

--- a/index.html
+++ b/index.html
@@ -58,12 +58,36 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet optio laborum ipsa unde <br> neque, animi quos vitae impedit libero necessitatibus.</p>
                 </div>
                 <div class="course-container">
-                    <div class="course-card">card No. 1</div>
-                    <div class="course-card">card No. 2</div>
-                    <div class="course-card">card No. 3</div>
-                    <div class="course-card">card No. 4</div>
-                    <div class="course-card">card No. 5</div>
-                    <div class="course-card">card No. 6</div>
+                    <div class="course-card">
+                        <img src="img/c.jpg" alt="C programming">
+                        <h2>C progarmming</h2>
+                        <input type="button" value="See more.." name="See more..">
+                    </div>
+                    <div class="course-card">
+                        <img src="img/php.png" alt="php">
+                        <h2>Php</h2>
+                        <input type="button" value="See more.." name="See more..">
+                    </div>
+                    <div class="course-card">
+                        <img src="img/python.png" alt="Python">
+                        <h2>Python</h2>
+                        <input type="button" value="See more.." name="See more..">
+                    </div>
+                    <div class="course-card">
+                        <img src="img/Pyhon Advance.jpg" alt="Pyhon Advance">
+                        <h2>Python Advance</h2>
+                        <input type="button" value="See more.." name="See more..">
+                    </div>
+                    <div class="course-card">
+                        <img src="img/core C.png" alt="core C">
+                        <h2>Core c</h2>
+                        <input type="button" value="See more.." name="See more..">
+                    </div>
+                    <div class="course-card">
+                        <img src="img/java.png" alt="java">
+                        <h2>Java</h2>
+                        <input type="button" value="See more.." name="See more..">
+                    </div>
 
                 </div>
 
