--- a/about.html
+++ b/about.html
@@ -52,44 +52,59 @@
         <!--It is complete body-->
 
         <div class="body">
+            
             <div class="imgslide">
-                <img name="slide" width="100%" ; height="500px" ; alt="slide1">
+                <img src="img/ComCod_template.png" width="100%" ; height="300px" ; alt="slide1">
             </div>
 
             <!--Write About Page Code here-->
             <section class="story-section">
                 <h1>OUR STORY</h1>
-                <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus perspiciatis molestiae assumenda debitis eligendi culpa sequi eos quae dolores nemo reiciendis saepe atque incidunt sapiente iure similique, doloremque libero nesciunt voluptatem
-                    rerum praesentium nisi et. Doloremque, autem exercitationem asperiores ab minima labore voluptas. Nesciunt hic sint cum soluta animi voluptate vitae, rerum officiis laborum aliquid, rem quia nam. Quisquam eligendi incidunt voluptate?
-                    Amet consequatur doloremque natus omnis minima magni, molestias perferendis esse? Nisi ab nostrum vero impedit illum ex nesciunt aspernatur assumenda. Excepturi unde amet quidem itaque deleniti hic quod quis expedita, tenetur corporis
-                    exercitationem magnam error ea saepe. Obcaecati.</P>
+                <P>tenetur corporisexercitationem magnam error ea saepe. Obcaecati.</P>
             </section>
 
-            <h1 class="our-team">OUR TEAM </h1>
+            <h1 class="our-team">Team Members</h1>
             <section class="team-members">
                 <div class="team-card">
-                    <img src="img/core C.png">
-                    <p>Incidunt enim sequi harum ab exercitationem rem at quis amet velit nam?
-
-                    </p>
+                    <img src="img/akash.jpg">
+                    <h2>Akash Rana</h2>
+                    <p><b>Role:</b>&nbsp; Student</p>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/akashpundir931/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        </ul>
                 </div>
                 <div class="team-card">
-                    <img src="img/core C.png">
-                    <p> Incidunt enim sequi harum ab exercitationem rem at quis amet velit nam?
-
-                    </p>
+                    <img src="img/user.png">
+                    <h2>Aarya</h2>
+                    <p><b>Role:</b>&nbsp;Developer</p>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        </ul>
                 </div>
 
                 <div class="team-card">
-                    <img src="img/core C.png">
-                    <p>Incidunt enim sequi harum ab exercitationem rem at quis amet velit nam?
-
-                    </p>
+                    <img src="img/user.png">
+                    <h2>Aman Kumar</h2>
+                    <p><b>Role:</b>&nbsp;Developer</p>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        </ul>
                 </div>
                 <div class="team-card">
-                    <img src="img/core C.png">
-                    <p>Incidunt enim sequi harum ab exercitationem rem at quis amet velit nam?
-
+                    <img src="img/user.png">
+                    <h2>Shahbaz</h2>
+                    <p><b>Role:</b>&nbsp;Developer</p>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        </ul>
                 </div>
             </section>
 
