--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
           <div class="container-contact"> 
           	 <h2>Contact Us</h2> 
              <p>Email us and keep upto date with our latest news</p> 
-            <div class="contact-form"> 
+            <div class="contact-form" id="contact-form">
 
              <!-- First grid --> 
           <div> 
