--- a/contact.html
+++ b/contact.html
@@ -73,11 +73,11 @@
               <!-- second grid --> 
           <div>         
             <form> 
-              <input type="text" placeholder="Your Name" required> 
-              <input type="text" name="Last name" placeholder = "Last name" ><br> 
-              <input type="email" placeholder="Email" required><br> 
-              <input type="text" placeholder="Subject of this message"><br> 
-              <textarea name="message" placeholder="Message" rows="5" required></textarea><br> 
+              <input type="text" placeholder="Your Name" required class="input-con"> 
+              <input type="text" name="Last name" placeholder = "Last name" class="input-con"><br> 
+              <input type="email" placeholder="Email" required class="input-con"><br> 
+              <input type="text" placeholder="Subject of this message" class="input-con"><br> 
+              <textarea name="message" placeholder="Message" rows="5" required class="input-con"></textarea><br> 
               <button class="submit-con">Send Message</button>  
             </form>    
           </div> 
