--- a/about.html
+++ b/about.html
@@ -68,14 +68,14 @@
                 <div class="team-card">
                     <img src="img/akash.jpg">
                     <h2>Akash Rana</h2>
-                    <p><b>Role:</b>&nbsp; Student</p>
+                    <p><b>Role:</b>&nbsp;Student</p>
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.instagram.com/akashpundir931/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         </ul>
                 </div>
-                <div class="team-card">
+                <div class="team-card" id="team-card">
                     <img src="img/user.png">
                     <h2>Aarya</h2>
                     <p><b>Role:</b>&nbsp;Developer</p>
