--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
             <h1 class="our-team">Team Members</h1>
             <section class="team-members">
-                <div class="team-card">
+                <div class="team-card" id="team-card">
                     <img src="img/akash.jpg">
                     <h2>Akash Rana</h2>
                     <p><b>Role:</b>&nbsp;Student</p>
@@ -86,7 +86,7 @@
                         </ul>
                 </div>
 
-                <div class="team-card">
+                <div class="team-card" id="team-card">
                     <img src="img/user.png">
                     <h2>Aman Kumar</h2>
                     <p><b>Role:</b>&nbsp;Developer</p>
@@ -96,7 +96,7 @@
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         </ul>
                 </div>
-                <div class="team-card">
+                <div class="team-card" id="team-card">
                     <img src="img/user.png">
                     <h2>Shahbaz</h2>
                     <p><b>Role:</b>&nbsp;Developer</p>
