--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
                 <div class="sub-heading" id="sub-heading">
                     <h1>Technical Courses</h1>
                     <p>All type of technical courses are available now.</p>
+                    <p>Computer Science.<br>
+                        Aerospace engineering.<br>
+                        Electrical engineering.<br>
+                        Mechanical engineering.<br>
+                        Civil engineering.<br>
+                        Biomedical engineering.</p>
                     <!-- <p>Course About<br>Course About<br>Course About<br>Course About<br></p> -->
                 </div>
             </div>
