--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div id="sign-in">
                         <input type="button" value="sign-up" name="sign-up">
                     </div>
-                    <div id="sign-in">
+                    <div id="sign-in" class="login">
                         <input type="button" value="Login" name="Login">
                     </div>
                 </div>
