--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 
                 <div class="team-card" id="team-card">
                     <img src="img/user.png">
-                    <h2>Aman Kumar</h2>
+                    <h2>New</h2>
                     <p><b>Role:</b>&nbsp;Developer</p>
                     <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
